--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:45:35 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:46:18 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -166,8 +166,8 @@ E thru 10</td>
 E thru 11</td>
       <td>Corey Conners -2
 E thru 16</td>
-      <td class="greyout leftborder">Shane Lowry +2
-+1 thru 1</td>
+      <td class="greyout leftborder">Shane Lowry +1
+E thru 2</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
     </tr>
@@ -252,6 +252,22 @@ E thru 16</td>
 +3 thru 12</td>
     </tr>
     <tr>
+      <td class="bigbold">Team Steve</td>
+      <td class="bigbold">-7</td>
+      <td>Cameron Smith(W) -3
++1 thru 1</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 11</td>
+      <td>Shane Lowry +1
+E thru 2</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 10</td>
+      <td class="greyout">Brooks Koepka +3
+E thru 10</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler -3
@@ -262,8 +278,8 @@ E thru 11</td>
 Not started</td>
       <td>Will Zalatoris E
 +1 thru 11</td>
-      <td class="greyout leftborder">Shane Lowry +2
-+1 thru 1</td>
+      <td class="greyout leftborder">Shane Lowry +1
+E thru 2</td>
       <td class="greyout">Justin Thomas(W) +4
 Not started</td>
     </tr>
@@ -300,22 +316,6 @@ E thru 16</td>
 +3 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Team Steve</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith(W) -3
-+1 thru 1</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 11</td>
-      <td>Viktor Hovland +2
-+2 thru 10</td>
-      <td class="greyout leftborder">Shane Lowry +2
-+1 thru 1</td>
-      <td class="greyout">Brooks Koepka +3
-E thru 10</td>
-    </tr>
-    <tr>
       <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler(W) -3
@@ -324,12 +324,12 @@ Not started</td>
 E thru 11</td>
       <td>Corey Conners -2
 E thru 16</td>
-      <td>Rory McIlroy +1
-E thru 9</td>
-      <td class="greyout leftborder">Jon Rahm +1
+      <td>Jon Rahm +1
 -1 thru 11</td>
-      <td class="greyout">Robert MacIntyre +2
+      <td class="greyout leftborder">Robert MacIntyre +2
 +1 (F)</td>
+      <td class="greyout">Rory McIlroy +2
++1 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -468,12 +468,12 @@ E thru 16</td>
 E thru 16</td>
       <td>Hideki Matsuyama E
 Not started</td>
-      <td>Jon Rahm +1
+      <td>Shane Lowry +1
+E thru 2</td>
+      <td class="greyout leftborder">Jon Rahm +1
 -1 thru 11</td>
-      <td class="greyout leftborder">Viktor Hovland +2
+      <td class="greyout">Viktor Hovland +2
 +2 thru 10</td>
-      <td class="greyout">Shane Lowry +2
-+1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
@@ -492,6 +492,22 @@ Not started</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith -3
++1 thru 1</td>
+      <td>Matthew Fitzpatrick -1
+E thru 9</td>
+      <td>Will Zalatoris E
++1 thru 11</td>
+      <td>Shane Lowry +1
+E thru 2</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 10</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">-3</td>
       <td>Dustin Johnson(W) -2
@@ -500,12 +516,28 @@ Not started</td>
 Not started</td>
       <td>Matthew Fitzpatrick -1
 E thru 9</td>
-      <td>Jordan Spieth +1
+      <td>Shane Lowry +1
+E thru 2</td>
+      <td class="greyout leftborder">Jordan Spieth +1
 -1 thru 10</td>
-      <td class="greyout leftborder">Shane Lowry +2
-+1 thru 1</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Stan and Ollie Garch</td>
+      <td class="bigbold">-3</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Corey Conners -2
+E thru 16</td>
+      <td>Shane Lowry +1
+E thru 2</td>
+      <td>Jordan Spieth +1
+-1 thru 10</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 10</td>
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Neville Spillman</td>
@@ -524,50 +556,18 @@ E thru 10</td>
 +3 thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -3
-+1 thru 1</td>
-      <td>Tiger Woods -1
-Not started</td>
-      <td>Hideki Matsuyama E
-Not started</td>
-      <td>Rory McIlroy(W) +1
-E thru 9</td>
-      <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 10</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Santorini Sunsets</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Patrick Cantlay -2
-E thru 11</td>
-      <td>Rory McIlroy +1
-E thru 9</td>
-      <td>Viktor Hovland +2
-+2 thru 10</td>
-      <td class="greyout leftborder">Justin Thomas(W) +4
-Not started</td>
-      <td class="greyout">Xander Schauffele +4
-+2 thru 10</td>
-    </tr>
-    <tr>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">-2</td>
       <td>Patrick Cantlay -2
 E thru 11</td>
       <td>Dustin Johnson -2
 +1 thru 12</td>
-      <td>Rory McIlroy(W) +1
-E thru 9</td>
       <td>Jon Rahm +1
 -1 thru 11</td>
-      <td class="greyout leftborder">Jordan Spieth +1
+      <td>Jordan Spieth +1
 -1 thru 10</td>
+      <td class="greyout leftborder">Rory McIlroy(W) +2
++1 thru 10</td>
       <td class="greyout">Viktor Hovland +2
 +2 thru 10</td>
     </tr>
@@ -636,32 +636,16 @@ Not started</td>
 +2 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -3
 +1 thru 1</td>
-      <td>Matthew Fitzpatrick -1
-E thru 9</td>
-      <td>Will Zalatoris E
-+1 thru 11</td>
-      <td>Shane Lowry +2
-+1 thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 10</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Stan and Ollie Garch</td>
-      <td class="bigbold">-2</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Corey Conners -2
-E thru 16</td>
-      <td>Jordan Spieth +1
--1 thru 10</td>
-      <td>Shane Lowry +2
-+1 thru 1</td>
+      <td>Patrick Cantlay -2
+E thru 11</td>
+      <td>Shane Lowry +1
+E thru 2</td>
+      <td>Viktor Hovland +2
++2 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 10</td>
       <td class="greyout">Justin Thomas(W) +4
@@ -684,6 +668,38 @@ E thru 11</td>
 E thru 10</td>
     </tr>
     <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -3
++1 thru 1</td>
+      <td>Tiger Woods -1
+Not started</td>
+      <td>Hideki Matsuyama E
+Not started</td>
+      <td>Rory McIlroy(W) +2
++1 thru 10</td>
+      <td class="greyout leftborder">Xander Schauffele +4
++2 thru 10</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Low Golf IQ</td>
+      <td class="bigbold">-2</td>
+      <td>Joaquin Niemann -3
+Not started</td>
+      <td>Corey Conners -2
+E thru 16</td>
+      <td>Shane Lowry(W) +1
+E thru 2</td>
+      <td>Brian Harman +2
+E thru 5</td>
+      <td class="greyout leftborder">Viktor Hovland +2
++2 thru 10</td>
+      <td class="greyout">Sam Burns +6
++3 thru 12</td>
+    </tr>
+    <tr>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">-2</td>
       <td>Patrick Cantlay -2
@@ -698,6 +714,22 @@ Not started</td>
 -1 thru 10</td>
       <td class="greyout">Brooks Koepka +3
 E thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunsets</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Patrick Cantlay -2
+E thru 11</td>
+      <td>Viktor Hovland +2
++2 thru 10</td>
+      <td>Rory McIlroy +2
++1 thru 10</td>
+      <td class="greyout leftborder">Justin Thomas(W) +4
+Not started</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 1</td>
@@ -748,54 +780,6 @@ Not started</td>
 +2 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">-1</td>
-      <td>Corey Conners -2
-E thru 16</td>
-      <td>Collin Morikawa E
--1 thru 12</td>
-      <td>Will Zalatoris E
-+1 thru 11</td>
-      <td>Rory McIlroy +1
-E thru 9</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 10</td>
-      <td class="greyout">Xander Schauffele(W) +4
-+2 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith -3
-+1 thru 1</td>
-      <td>Patrick Cantlay -2
-E thru 11</td>
-      <td>Viktor Hovland +2
-+2 thru 10</td>
-      <td>Shane Lowry +2
-+1 thru 1</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 10</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Low Golf IQ</td>
-      <td class="bigbold">-1</td>
-      <td>Joaquin Niemann -3
-Not started</td>
-      <td>Corey Conners -2
-E thru 16</td>
-      <td>Shane Lowry(W) +2
-+1 thru 1</td>
-      <td>Brian Harman +2
-E thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +2
-+2 thru 10</td>
-      <td class="greyout">Sam Burns +6
-+3 thru 12</td>
-    </tr>
-    <tr>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">0</td>
       <td>Patrick Cantlay -2
@@ -828,52 +812,20 @@ E thru 10</td>
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">Grace</td>
       <td class="bigbold">0</td>
-      <td>Tiger Woods(W) -1
-Not started</td>
+      <td>Corey Conners -2
+E thru 16</td>
       <td>Collin Morikawa E
 -1 thru 12</td>
       <td>Will Zalatoris E
 +1 thru 11</td>
-      <td>Rory McIlroy +1
-E thru 9</td>
-      <td class="greyout leftborder">Viktor Hovland +2
+      <td>Viktor Hovland +2
 +2 thru 10</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jabby</td>
-      <td class="bigbold">0</td>
-      <td>Corey Conners -2
-E thru 16</td>
-      <td>Will Zalatoris E
-+1 thru 11</td>
-      <td>Rory McIlroy +1
-E thru 9</td>
-      <td>Jon Rahm +1
--1 thru 11</td>
-      <td class="greyout leftborder">Brooks Koepka +3
-E thru 10</td>
-      <td class="greyout">Justin Thomas(W) +4
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">0</td>
-      <td>Cameron Smith -3
-+1 thru 1</td>
-      <td>Jon Rahm(W) +1
--1 thru 11</td>
-      <td>Rory McIlroy +1
-E thru 9</td>
-      <td>Jordan Spieth +1
--1 thru 10</td>
-      <td class="greyout leftborder">Viktor Hovland +2
+      <td class="greyout leftborder">Rory McIlroy +2
++1 thru 10</td>
+      <td class="greyout">Xander Schauffele(W) +4
 +2 thru 10</td>
-      <td class="greyout">Bubba Watson +2
-+1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -892,36 +844,52 @@ E thru 10</td>
 +2 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Brian McDonald</td>
+      <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">1</td>
-      <td>Corey Conners -2
-E thru 16</td>
-      <td>Jon Rahm(W) +1
--1 thru 11</td>
-      <td>Rory McIlroy +1
-E thru 9</td>
-      <td>Jordan Spieth +1
--1 thru 10</td>
-      <td class="greyout leftborder">Xander Schauffele +4
+      <td>Tiger Woods(W) -1
+Not started</td>
+      <td>Collin Morikawa E
+-1 thru 12</td>
+      <td>Will Zalatoris E
++1 thru 11</td>
+      <td>Viktor Hovland +2
 +2 thru 10</td>
+      <td class="greyout leftborder">Rory McIlroy +2
++1 thru 10</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
     </tr>
     <tr>
-      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">Jabby</td>
       <td class="bigbold">1</td>
-      <td>Scottie Scheffler -3
-Not started</td>
-      <td>Jon Rahm(W) +1
+      <td>Corey Conners -2
+E thru 16</td>
+      <td>Will Zalatoris E
++1 thru 11</td>
+      <td>Jon Rahm +1
 -1 thru 11</td>
-      <td>Rory McIlroy +1
-E thru 9</td>
-      <td>Viktor Hovland +2
-+2 thru 10</td>
+      <td>Rory McIlroy +2
++1 thru 10</td>
       <td class="greyout leftborder">Brooks Koepka +3
 E thru 10</td>
-      <td class="greyout">Xander Schauffele +4
+      <td class="greyout">Justin Thomas(W) +4
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Glitter Girl</td>
+      <td class="bigbold">1</td>
+      <td>Cameron Smith -3
++1 thru 1</td>
+      <td>Jon Rahm(W) +1
+-1 thru 11</td>
+      <td>Jordan Spieth +1
+-1 thru 10</td>
+      <td>Viktor Hovland +2
 +2 thru 10</td>
+      <td class="greyout leftborder">Rory McIlroy +2
++1 thru 10</td>
+      <td class="greyout">Bubba Watson +2
++1 thru 14</td>
     </tr>
     <tr>
       <td class="bigbold">NewCastle Magpies</td>
@@ -940,36 +908,52 @@ Not started</td>
 +2 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">2</td>
-      <td>Tiger Woods -1
-Not started</td>
-      <td>Collin Morikawa(W) E
--1 thru 12</td>
-      <td>Rory McIlroy +1
-E thru 9</td>
-      <td>Viktor Hovland +2
-+2 thru 10</td>
-      <td class="greyout leftborder">Justin Thomas +4
-Not started</td>
-      <td class="greyout">Gary Woodland +8
-+5 thru 17</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hasbulla</td>
-      <td class="bigbold">3</td>
-      <td>Patrick Cantlay(W) -2
-E thru 11</td>
-      <td>Rory McIlroy +1
-E thru 9</td>
-      <td>Jon Rahm +1
+      <td>Corey Conners -2
+E thru 16</td>
+      <td>Jon Rahm(W) +1
 -1 thru 11</td>
-      <td>Brooks Koepka +3
-E thru 10</td>
+      <td>Jordan Spieth +1
+-1 thru 10</td>
+      <td>Rory McIlroy +2
++1 thru 10</td>
       <td class="greyout leftborder">Xander Schauffele +4
 +2 thru 10</td>
       <td class="greyout">Justin Thomas +4
 Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Fred Jamieson</td>
+      <td class="bigbold">2</td>
+      <td>Scottie Scheffler -3
+Not started</td>
+      <td>Jon Rahm(W) +1
+-1 thru 11</td>
+      <td>Viktor Hovland +2
++2 thru 10</td>
+      <td>Rory McIlroy +2
++1 thru 10</td>
+      <td class="greyout leftborder">Brooks Koepka +3
+E thru 10</td>
+      <td class="greyout">Xander Schauffele +4
++2 thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">3</td>
+      <td>Tiger Woods -1
+Not started</td>
+      <td>Collin Morikawa(W) E
+-1 thru 12</td>
+      <td>Viktor Hovland +2
++2 thru 10</td>
+      <td>Rory McIlroy +2
++1 thru 10</td>
+      <td class="greyout leftborder">Justin Thomas +4
+Not started</td>
+      <td class="greyout">Gary Woodland +8
++5 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Glen Wilson</td>
@@ -1020,6 +1004,22 @@ E thru 10</td>
 Not started</td>
     </tr>
     <tr>
+      <td class="bigbold">Hasbulla</td>
+      <td class="bigbold">4</td>
+      <td>Patrick Cantlay(W) -2
+E thru 11</td>
+      <td>Jon Rahm +1
+-1 thru 11</td>
+      <td>Rory McIlroy +2
++1 thru 10</td>
+      <td>Brooks Koepka +3
+E thru 10</td>
+      <td class="greyout leftborder">Xander Schauffele +4
++2 thru 10</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Wylie</td>
       <td class="bigbold">4</td>
       <td>Scottie Scheffler -3
@@ -1036,22 +1036,6 @@ Not started</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Benjac</td>
-      <td class="bigbold">6</td>
-      <td>Cameron Smith -3
-+1 thru 1</td>
-      <td>Rory McIlroy +1
-E thru 9</td>
-      <td>Justin Thomas(W) +4
-Not started</td>
-      <td>Xander Schauffele +4
-+2 thru 10</td>
-      <td class="greyout leftborder">Sam Burns +6
-+3 thru 12</td>
-      <td class="greyout">Justin Rose +9
-+5 thru 17</td>
-    </tr>
-    <tr>
       <td class="bigbold">Yellow in Augusta</td>
       <td class="bigbold">7</td>
       <td>Jon Rahm +1
@@ -1066,6 +1050,22 @@ E thru 10</td>
 Not started</td>
       <td class="greyout">Xander Schauffele +4
 +2 thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Benjac</td>
+      <td class="bigbold">7</td>
+      <td>Cameron Smith -3
++1 thru 1</td>
+      <td>Rory McIlroy +2
++1 thru 10</td>
+      <td>Justin Thomas(W) +4
+Not started</td>
+      <td>Xander Schauffele +4
++2 thru 10</td>
+      <td class="greyout leftborder">Sam Burns +6
++3 thru 12</td>
+      <td class="greyout">Justin Rose +9
++5 thru 17</td>
     </tr>
     <tr>
       <td class="bigbold">Bryan Francis</td>
