--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:54:55 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:55:38 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -147,7 +147,7 @@ body {
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Matthew Fitzpatrick -1
 E thru 10</td>
       <td class="greyout leftborder">Brooks Koepka +3
@@ -179,7 +179,7 @@ E thru 10</td>
       <td>Dustin Johnson(W) -2
 +1 thru 12</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Corey Conners -1
 +1 thru 17</td>
       <td class="greyout leftborder">Shane Lowry +1
@@ -211,7 +211,7 @@ E thru 13</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Shane Lowry +1
 E thru 2</td>
       <td class="greyout leftborder">Viktor Hovland +2
@@ -257,7 +257,7 @@ Not started</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Tony Finau -1
 Not started</td>
       <td>Shane Lowry +1
@@ -273,7 +273,7 @@ Not started</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Dustin Johnson -2
 +1 thru 12</td>
       <td>Adam Scott +2
@@ -289,7 +289,7 @@ E thru 10</td>
       <td>Cameron Smith -3
 +1 thru 1</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Corey Conners -1
 +1 thru 17</td>
       <td>Will Zalatoris +1
@@ -323,7 +323,7 @@ Not started</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Brooks Koepka +3
 E thru 10</td>
       <td class="greyout leftborder">Sam Burns +5
@@ -339,7 +339,7 @@ Not started</td>
       <td>Cameron Smith -3
 +1 thru 1</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Brooks Koepka +3
 E thru 10</td>
       <td class="greyout leftborder">Xander Schauffele +4
@@ -369,7 +369,7 @@ E thru 10</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Patrick Cantlay(W) -2
-E thru 11</td>
+E thru 12</td>
       <td>Corey Conners -1
 +1 thru 17</td>
       <td>Viktor Hovland +2
@@ -385,7 +385,7 @@ E thru 12</td>
       <td>Scottie Scheffler(W) -3
 Not started</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Corey Conners -1
 +1 thru 17</td>
       <td>Robert MacIntyre +2
@@ -529,7 +529,7 @@ Not started</td>
       <td>Cameron Smith -3
 +1 thru 1</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Shane Lowry +1
 E thru 2</td>
       <td>Viktor Hovland +2
@@ -545,7 +545,7 @@ Not started</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Jordan Spieth(W) +1
 -1 thru 10</td>
       <td>Jon Rahm +2
@@ -575,7 +575,7 @@ Not started</td>
       <td class="bigbold">Shane Tummon</td>
       <td class="bigbold">-2</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Tony Finau -1
 Not started</td>
       <td>Collin Morikawa E
@@ -593,7 +593,7 @@ E thru 10</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
       <td>Rory McIlroy +2
@@ -607,7 +607,7 @@ Not started</td>
       <td class="bigbold">Lorette Hosegood</td>
       <td class="bigbold">-1</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Dustin Johnson -2
 +1 thru 12</td>
       <td>Jordan Spieth +1
@@ -639,7 +639,7 @@ E thru 12</td>
       <td class="bigbold">Shane Hosegood</td>
       <td class="bigbold">-1</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Collin Morikawa(W) E
 -1 thru 12</td>
       <td>Hideki Matsuyama E
@@ -657,7 +657,7 @@ Out With Injury</td>
       <td>Scottie Scheffler -3
 Not started</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Jordan Spieth +1
 -1 thru 10</td>
       <td>Brooks Koepka +3
@@ -673,7 +673,7 @@ Not started</td>
       <td>Corey Conners(W) -1
 +1 thru 17</td>
       <td>Daniel Berger -1
-E thru 1</td>
+E thru 2</td>
       <td>Collin Morikawa E
 -1 thru 12</td>
       <td>Jordan Spieth +1
@@ -721,7 +721,7 @@ Not started</td>
       <td>Cameron Smith -3
 +1 thru 1</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Will Zalatoris +1
 +2 thru 12</td>
       <td>Brooks Koepka +3
@@ -735,7 +735,7 @@ Not started</td>
       <td class="bigbold">Matt Tummon</td>
       <td class="bigbold">-1</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Dustin Johnson -2
 +1 thru 12</td>
       <td>Jordan Spieth(W) +1
@@ -756,10 +756,10 @@ Not started</td>
 +1 thru 17</td>
       <td>Shane Lowry(W) +1
 E thru 2</td>
-      <td>Brian Harman +2
-E thru 5</td>
-      <td class="greyout leftborder">Viktor Hovland +2
+      <td>Viktor Hovland +2
 +2 thru 11</td>
+      <td class="greyout leftborder">Brian Harman +3
++1 thru 6</td>
       <td class="greyout">Sam Burns +5
 +2 thru 13</td>
     </tr>
@@ -767,7 +767,7 @@ E thru 5</td>
       <td class="bigbold">Walk 1</td>
       <td class="bigbold">1</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Collin Morikawa E
 -1 thru 12</td>
       <td>Will Zalatoris +1
@@ -783,9 +783,9 @@ E thru 12</td>
       <td class="bigbold">Al Shulman</td>
       <td class="bigbold">1</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Daniel Berger -1
-E thru 1</td>
+E thru 2</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
       <td>Jon Rahm +2
@@ -799,7 +799,7 @@ Not started</td>
       <td class="bigbold">Roy Jeffrey A</td>
       <td class="bigbold">1</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Hideki Matsuyama E
 Not started</td>
       <td>Jordan Spieth +1
@@ -815,7 +815,7 @@ Not started</td>
       <td class="bigbold">NewCastle Magpies</td>
       <td class="bigbold">2</td>
       <td>Patrick Cantlay -2
-E thru 11</td>
+E thru 12</td>
       <td>Collin Morikawa E
 -1 thru 12</td>
       <td>Jordan Spieth +1
@@ -975,7 +975,7 @@ E thru 10</td>
       <td class="bigbold">Hasbulla</td>
       <td class="bigbold">5</td>
       <td>Patrick Cantlay(W) -2
-E thru 11</td>
+E thru 12</td>
       <td>Rory McIlroy +2
 +1 thru 10</td>
       <td>Jon Rahm +2
