--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:55:38 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 08, 1:56:21 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -396,22 +396,6 @@ E thru 12</td>
 E thru 12</td>
     </tr>
     <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">-3</td>
-      <td>Cameron Smith -3
-+1 thru 1</td>
-      <td>Corey Conners -1
-+1 thru 17</td>
-      <td>Tiger Woods -1
-Not started</td>
-      <td>Jon Rahm(W) +2
-E thru 12</td>
-      <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 10</td>
-      <td class="greyout">Sam Burns +5
-+2 thru 13</td>
-    </tr>
-    <tr>
       <td class="bigbold">The Resort</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -3
@@ -442,6 +426,22 @@ E thru 2</td>
 -1 thru 10</td>
       <td class="greyout">Louis Oosthuizen
 Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -3
++1 thru 1</td>
+      <td>Corey Conners -1
++1 thru 17</td>
+      <td>Tiger Woods E
++1 thru 1</td>
+      <td>Jon Rahm(W) +2
+E thru 12</td>
+      <td class="greyout leftborder">Xander Schauffele +4
++2 thru 10</td>
+      <td class="greyout">Sam Burns +5
++2 thru 13</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunrises</td>
@@ -554,22 +554,6 @@ E thru 12</td>
 E thru 10</td>
       <td class="greyout">Sam Burns +5
 +2 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -3
-+1 thru 1</td>
-      <td>Tiger Woods -1
-Not started</td>
-      <td>Hideki Matsuyama E
-Not started</td>
-      <td>Rory McIlroy(W) +2
-+1 thru 10</td>
-      <td class="greyout leftborder">Xander Schauffele +4
-+2 thru 10</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
@@ -748,6 +732,22 @@ E thru 12</td>
 E thru 10</td>
     </tr>
     <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith -3
++1 thru 1</td>
+      <td>Hideki Matsuyama E
+Not started</td>
+      <td>Tiger Woods E
++1 thru 1</td>
+      <td>Rory McIlroy(W) +2
++1 thru 10</td>
+      <td class="greyout leftborder">Xander Schauffele +4
++2 thru 10</td>
+      <td class="greyout">Justin Thomas +4
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Low Golf IQ</td>
       <td class="bigbold">-1</td>
       <td>Joaquin Niemann -3
@@ -860,22 +860,6 @@ E thru 10</td>
 +2 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">2</td>
-      <td>Tiger Woods(W) -1
-Not started</td>
-      <td>Collin Morikawa E
--1 thru 12</td>
-      <td>Will Zalatoris +1
-+2 thru 12</td>
-      <td>Viktor Hovland +2
-+2 thru 11</td>
-      <td class="greyout leftborder">Rory McIlroy +2
-+1 thru 10</td>
-      <td class="greyout">Justin Thomas +4
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">2</td>
       <td>Cameron Smith -3
@@ -892,20 +876,20 @@ E thru 12</td>
 +1 thru 15</td>
     </tr>
     <tr>
-      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">3</td>
-      <td>Tiger Woods -1
-Not started</td>
-      <td>Collin Morikawa(W) E
+      <td>Tiger Woods(W) E
++1 thru 1</td>
+      <td>Collin Morikawa E
 -1 thru 12</td>
+      <td>Will Zalatoris +1
++2 thru 12</td>
       <td>Viktor Hovland +2
 +2 thru 11</td>
-      <td>Rory McIlroy +2
+      <td class="greyout leftborder">Rory McIlroy +2
 +1 thru 10</td>
-      <td class="greyout leftborder">Justin Thomas +4
+      <td class="greyout">Justin Thomas +4
 Not started</td>
-      <td class="greyout">Gary Woodland +8
-+5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -922,6 +906,22 @@ E thru 12</td>
 E thru 10</td>
       <td class="greyout">Xander Schauffele +4
 +2 thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">4</td>
+      <td>Collin Morikawa(W) E
+-1 thru 12</td>
+      <td>Tiger Woods E
++1 thru 1</td>
+      <td>Viktor Hovland +2
++2 thru 11</td>
+      <td>Rory McIlroy +2
++1 thru 10</td>
+      <td class="greyout leftborder">Justin Thomas +4
+Not started</td>
+      <td class="greyout">Gary Woodland +8
++5 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Brian McDonald</td>
